**************************************
*** SquirrelMail Stable Series 1.2 ***
**************************************

Version 1.2.12 [cvs]
--------------------
  - Fixed preferences not being save on PHP 4.3.x.
  - Stopped PHP 4.3.x warning about PHP 4.2.3's session bug appearing
    on the mailbox view.
  - Fixed mailbox names so + is really a possible character in the
    mailbox.
  - Changed the reading of mail so that reply colours alternate
    depending on the level of reply.
  - Fixed issue with \ in password.
  - Disabled Ukrainian translation (it is not in Ukrainian)
  - Replaced obsolate 2mbit.com RBL with ahbl.org RBL. Bug.No.829887

Version 1.2.11 -- 9 February 2003
----------------------------------
  - Closed some cross site scripting (XSS) bugs:
     * Vulnerabilities in the mail_fetch plugin fixed.
     * Vulnerabilities in the calendar plugin fixed.
     * Vulnerabilities in the mailbox display fixed.
     * Vulnerabilities in the mailer headers.
  - Fixed some small HTML validity issues here and there.
  - Fixed a bug that prevented login to multiple domain exchange servers.
  - Fixed a bug with IIS servers that caused some redirects to fail.
  - Fix sqmtopdir that would give an error in rare occasions.
  - New language: Ukrainian.
  - Made sure subfolders of Sent are treated appropriately.
  - Fixed Attachment Common for Mozilla 1.x.
  - Bugfix to session handling once again.
  - Fixes to character set iso-8859-9.
  - Support for character set iso-8859-5.


Version 1.2.10 -- 2 December 2002
---------------------------------
  - Fixed version checking to ignore patch levels.
  - Fixed bugs / worked around PHP problems in sqsession_register.
    This should fix a small range of session-related problems.
  - Introduce session naming to avoid session collision with other apps.
  - Fixed that long preferences lines where not being read correctly.
  - Raised requirements to PHP 4.0.4 (was 4.0.2).